--- a/todo_index.html
+++ b/todo_index.html
@@ -43,7 +43,7 @@
 	
 	
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-	<script src="app.js"></script>
+	<script src="todo_vue.js"></script>
 	
 </body>
 	
