edited button spacing

--- a/todo_index.html
+++ b/todo_index.html
@@ -30,7 +30,7 @@
 				<span :class="{ done: todo.done }">{{todo.title}}</span>
 				<!--<input id="checkbox" type="checkbox" v-model="todo.done">-->
 				<button id="completed_btn" @click="completeTodo(todo)" type="button" name="button">DONE</button>
-				<button id="remove_btn" @click="removeTodo(todo)" type="button" name="button">DELETE</button>
+				<button id="remove_btn" @click="removeTodo(todo)" type="button" name="button">X</button>
 			</li>
 		</ul>
 		
