--- a/todo_index.html
+++ b/todo_index.html
@@ -18,7 +18,7 @@
 		
 		<form @submit.prevent="addTodo">
 			<input maxlength="23" v-model="newTodo" type="text" name="newTodo" id="newTodo" value="">
-			<button id="add_btn" type="submit" name="button">+</button>
+			<button id="add_btn" type="submit" name="button"><b>+</b></button>
 		</form>
 		
 		<ul>
